# ecn_bluerov

./: .gitmodules  CMakeLists.txt  README.md  package.xml
boot/: .camera_tilt.py.swp  ADC.cpp  AHRS.cpp  adc.launch  bar30.py  barometer.cpp  barometer.cpp.save  barometer.launch  boot.launch  brouillon.launch  cam.launch  camera_tilt.py  imu.launch  imu.launch.save  leak.cpp  leak.cpp.save  leak.launch  picam.cpp  picam.py  publisher.py  pwm.cpp  rosboot  rosboot.sh  rosboot_local  setup_boot  setup_boot.sh  thrusters.py
boot/install/: rosboot  rosboot.sh  setup_boot
boot/old/: picam.cpp  picam.py  picam_cv.cpp  picam_nocv.cpp
config/: cam_air.yaml  pirov_real.yaml
doc/: pins.txt  pirov.sh
launch/: calibrate.launch  cam_air.yaml  force_angle.yaml  image_view.launch  sliders.launch
picam_test/: CMakeLists.txt
script/: Arm_all.py  Servo.py  Tilt.py
test/: Arm_all.py
urdf/: pirov.xacro  pirov_uwsim.urdf
